--- a/app/package.json
+++ b/app/package.json
@@ -13,16 +13,18 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.8.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-linear-gradient": "~12.1.2"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
