--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,7 @@
     "react-native": "0.71.8",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
